--- a/dummy/CMakeLists.txt
+++ b/dummy/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.13)
-project(test LANGUAGES CXX)
+project(dummy LANGUAGES CXX)
 add_executable(${PROJECT_NAME} main.cpp)
