--- a/projects/use-override/CMakeLists.txt
+++ b/projects/use-override/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.14)
 project(use-override LANGUAGES CXX)
 
 find_package(LLVM REQUIRED CONFIG)
@@ -6,7 +6,8 @@ find_package(Clang REQUIRED CONFIG)
 
 llvm_map_components_to_libnames(llvm_libs all)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME})
+target_sources(${PROJECT_NAME} PRIVATE main.cpp)
 
 target_link_libraries(
     ${PROJECT_NAME} PRIVATE ${llvm_libs} clangTooling libclang)
